syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/Qitmeer/qng/p2p/proto/v1/gogo.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/message.proto";

message GraphState {
  uint32 total =100;
  uint32 layer =101;
  uint32 mainHeight =102;
  uint32 mainOrder =103;
  repeated Hash tips =104 [(gogoproto.moretags) = "ssz-max:\"100\""];
}

